--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  border: 1px solid red;
   background-color:#001f3f ;
 }
 
